grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ingress-rest
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
spec:
  tls:
  - hosts:
    - grafana-dev.uniperappa.com
    secretName: widgetsecret
  rules:
  - host: grafana-dev.uniperappa.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: grafana9
            port: 
              number: 80
